# ticktick-mcp

./: .env.example  .gitignore  DEVELOPMENT.md  HANDOFF.md  README.md  Terminal Saved Output.txt  instructions.md  llms-full.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ticktick_mcp/: __init__.py  server.py
src/ticktick_mcp/client/: __init__.py  api.py
src/ticktick_mcp/resources/: __init__.py  tasks.py
src/ticktick_mcp/tools/: __init__.py  task_tools.py
src/ticktick_mcp/utils/: auth.py  oauth.py
tests/: test_server.py
